@@ -43,6 +43,11 @@ Version 8.37 xx-xxx-2015
    FALSE when the capture could not be consulted, leading to a incorrect
    behaviour by pcre2_match(). This bug has been fixed.
 
+9. A reference to a duplicated named group (either a back reference or a test
+   for being set in a conditional) that occurred in a part of the pattern where
+   PCRE_DUPNAMES was not set caused the amount of memory needed for the pattern
+   to be incorrectly calculated, leading to overwriting.
+
 
 Version 8.36 26-September-2014
 ------------------------------
